{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 41,
  "lineage": "7e93412c-2b69-d155-dcec-a9f9b8cb1ff7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_env_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb3193ac3a1520ce",
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:instance/i-0eaa1dab3436d4d56",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eaa1dab3436d4d56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f67eb5f315e49e0",
            "private_dns": "ip-192-168-1-48.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.48",
            "public_dns": "ec2-3-25-152-110.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.25.152.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad554b80b2d07cce",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-030297b99f2116568",
              "sg-088f7b4628ecd7ec9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af224714079a4084",
            "tags": {
              "Name": "CM"
            },
            "tags_all": {
              "Name": "CM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030297b99f2116568",
              "sg-088f7b4628ecd7ec9"
            ]
          },
          "dependencies": [
            "aws_security_group.security",
            "aws_security_group.splunkweb",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb3193ac3a1520ce",
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:instance/i-000af468463ab8d20",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000af468463ab8d20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05740cafe4d1dfb1e",
            "private_dns": "ip-192-168-1-54.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.54",
            "public_dns": "ec2-3-26-50-91.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.50.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01696d722f624f567",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-030297b99f2116568",
              "sg-088f7b4628ecd7ec9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af224714079a4084",
            "tags": {
              "Name": "Index01"
            },
            "tags_all": {
              "Name": "Index01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030297b99f2116568",
              "sg-088f7b4628ecd7ec9"
            ]
          },
          "dependencies": [
            "aws_security_group.security",
            "aws_security_group.splunkweb",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_env_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:internet-gateway/igw-07a3f387544cb5fe8",
            "id": "igw-07a3f387544cb5fe8",
            "owner_id": "891376918224",
            "vpc_id": "vpc-0f1bf108e6dceb2ef"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:route-table/rtb-04e9e207f0db0ac3a",
            "id": "rtb-04e9e207f0db0ac3a",
            "owner_id": "891376918224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a3f387544cb5fe8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1bf108e6dceb2ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025882a10f862d9af",
            "route_table_id": "rtb-04e9e207f0db0ac3a",
            "subnet_id": "subnet-0af224714079a4084"
          },
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_route_table.route_table_test_env",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:security-group/sg-088f7b4628ecd7ec9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088f7b4628ecd7ec9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "891376918224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1bf108e6dceb2ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "splunkweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:security-group/sg-030297b99f2116568",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030297b99f2116568",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              }
            ],
            "name": "splunkweb",
            "name_prefix": "",
            "owner_id": "891376918224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f1bf108e6dceb2ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:subnet/subnet-0af224714079a4084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af224714079a4084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376918224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f1bf108e6dceb2ef"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:891376918224:vpc/vpc-0f1bf108e6dceb2ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-045ad697ba1f2d0e2",
            "default_route_table_id": "rtb-026a8773831e8656d",
            "default_security_group_id": "sg-0f13a04b5332ee2a1",
            "dhcp_options_id": "dopt-085141843e07af070",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1bf108e6dceb2ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026a8773831e8656d",
            "owner_id": "891376918224",
            "tags": {
              "Name": "test_env"
            },
            "tags_all": {
              "Name": "test_env"
            }
          }
        }
      ]
    }
  ]
}